Updated min-height of #content div to prevent shadows from being visible when pages are too short.

--- a/assets/www/sass/screen.scss
+++ b/assets/www/sass/screen.scss
@@ -113,6 +113,7 @@ h1 { font-size: 36px; }
 	position: relative;
 	top: 100px;
 	width: 100%;
+	min-height: 1030px; 
 	padding: 40px;
 	
 	@include single-box-shadow($black, 0, 0, 65px, 0, false);
